package zhw.service;

/**
 * 代理类和被代理类所共有的接口
 * 举例：潘金莲和王婆
 */
public interface KindWomen {
    void makeEyesWithMan();//金莲会抛媚眼

    void happyWithMan();//happy what？ You know that！
}
